// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of an Icon control with icon 1`] = `
<i
  className="ui-icon icon none fa fa-fw fa-star normal test-class"
  style={
    Object {
      "backgroundColor": "blue",
      "color": "red",
    }
  }
/>
`;

exports[`Test creation of an Icon control with image 1`] = `
<img
  className="ui-icon icon none normalBox fa-bomb normal"
  src="./test-icon-image.png"
  style={Object {}}
/>
`;

exports[`Test making the ButtonDialog invisible 1`] = `
<Icon
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={false}
  visible={false}
  width=""
>
  <i
    className="ui-icon icon none fa fa-fw fa-bomb normal invisible"
    style={Object {}}
  />
</Icon>
`;

exports[`Test retrieval of the Icon props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "iconName": "bomb",
  "id": "",
  "imageFile": "",
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": false,
  "visible": true,
  "width": "",
}
`;

exports[`Test the disabling of the Icon control 1`] = `
<Icon
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  iconName="bomb"
  id=""
  imageFile=""
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={false}
  visible={true}
  width=""
>
  <i
    className="ui-icon icon none fa fa-fw fa-bomb normal disabled nohover"
    style={Object {}}
  />
</Icon>
`;
